Apply suggestions from code review

--- a/packages/components/src/components/select/select.scss
+++ b/packages/components/src/components/select/select.scss
@@ -75,7 +75,7 @@
 			}
 
 			/* stylelint-disable-next-line selector-pseudo-element-no-unknown */
-			&::checkmark {
+			:is(&::checkmark) {
 				@extend %icon;
 
 				@include icons.icon-content("check");
