Apply suggestions from code review

--- a/packages/components/src/components/select/select.scss
+++ b/packages/components/src/components/select/select.scss
@@ -61,7 +61,7 @@
 		}
 
 		/* stylelint-disable-next-line selector-pseudo-element-no-unknown */
-		::picker(select) {
+		:is(::picker(select)) {
 			@extend %default-card;
 		}
 
