--- a/showcases/angular-showcase/src/app/components/navigation/navigation.component.html
+++ b/showcases/angular-showcase/src/app/components/navigation/navigation.component.html
@@ -20,8 +20,8 @@
 				{{ exampleName }}
 			</db-infotext>
 			<db-navigation [attr.aria-labelledby]="getId(exampleName)">
-				<db-navigation-item-group groupTitle="Navi-Item 1">
-					<db-navigation-item-group groupTitle="Sub-Navi-Item 1">
+				<db-navigation-item-group text="Navi-Item 1">
+					<db-navigation-item-group text="Sub-Navi-Item 1">
 						<db-navigation-item [active]="true">
 							<a href="#">Sub-Sub-Navi-Item 1</a>
 						</db-navigation-item>
