--- a/packages/components/src/styles/internal/_popover-component.scss
+++ b/packages/components/src/styles/internal/_popover-component.scss
@@ -236,7 +236,10 @@ $popover-gap-inset: calc(-1 * #{$popover-gap-size});
 	z-index: 1337;
 	// revert this if popover is included in button
 	white-space: normal;
-	max-inline-size: variables.$db-container-xs;
+	max-inline-size: min(
+		#{variables.$db-container-xs},
+		calc(100vw - 2 * #{variables.$db-spacing-fixed-md})
+	);
 	block-size: fit-content;
 	inline-size: fit-content;
 
