feat: add flat icon navigation for control-panel-mobile

--- a/packages/components/src/styles/index.scss
+++ b/packages/components/src/styles/index.scss
@@ -41,3 +41,5 @@
 @forward "../components/control-panel-secondary-actions/control-panel-secondary-actions";
 @forward "../components/navigation-item-group/navigation-item-group";
 @forward "../components/shell-sub-navigation/shell-sub-navigation";
+@forward "../components/control-panel-flat-icon-navigation/control-panel-flat-icon-navigation";
+
