--- a/packages/components/src/styles/internal/_control-panel-mobile.scss
+++ b/packages/components/src/styles/internal/_control-panel-mobile.scss
@@ -66,12 +66,6 @@
 %control-panel-mobile-position-bottom {
 	border-block-start: variables.$db-border-width-3xs solid
 		colors.$db-adaptive-on-bg-basic-emphasis-60-default;
-	grid-template-areas: "brand drawer-button primary";
-	grid-template-columns: min-content 1fr minmax(
-			#{variables.$db-sizing-md},
-			min-content
-		);
-	justify-content: space-evenly;
 
 	.db-control-panel-brand {
 		font-size: 0;
@@ -105,6 +99,32 @@
 					}
 				}
 			}
+		}
+	}
+
+	&:not([data-variant="flat-icon"]) {
+		grid-template-areas: "brand drawer-button primary";
+		grid-template-columns: min-content 1fr minmax(
+				#{variables.$db-sizing-md},
+				min-content
+			);
+		justify-content: space-evenly;
+	}
+
+	// Flat icon variant
+	&[data-variant="flat-icon"] {
+		.db-drawer,
+		.db-control-panel-brand,
+		.db-control-panel-primary-actions,
+		.db-control-panel-secondary-actions,
+		.db-control-panel-mobile-button,
+		.overflow-scroll-right-button,
+		.overflow-scroll-left-button {
+			display: none;
+		}
+
+		.db-control-panel-flat-icon-navigation {
+			display: initial;
 		}
 	}
 }
