--- a/packages/components/src/styles/internal/_custom-elements.scss
+++ b/packages/components/src/styles/internal/_custom-elements.scss
@@ -1,9 +1,9 @@
 $custom-elements: //hygen-insert
 
-	db-shell-sub-navigation, db-navigation-item-group,
-	db-control-panel-secondary-actions, db-control-panel-primary-actions,
-	db-control-panel-meta-navigation, db-control-panel-mobile,
-	db-custom-select-list-item, db-custom-select-list,
+	db-control-panel-flat-icon-navigation, db-shell-sub-navigation,
+	db-navigation-item-group, db-control-panel-secondary-actions,
+	db-control-panel-primary-actions, db-control-panel-meta-navigation,
+	db-control-panel-mobile, db-custom-select-list-item, db-custom-select-list,
 	db-custom-select-dropdown, db-custom-select-form-field, db-custom-select,
 	db-stack, db-switch, db-tab-panel, db-tabs, db-tab-list, db-tab-item,
 	db-tab-bar, db-tooltip, db-popover, db-textarea, db-navigation,
@@ -13,10 +13,16 @@ $custom-elements: //hygen-insert
 	db-icon, db-infotext, db-input, db-link, db-shell, db-section, db-tab;
 
 /* Sub components for shell */
-$control-panel-desktop: "> .db-control-panel-desktop, db-control-panel-desktop > .db-control-panel-desktop";
-$control-panel-mobile: "> .db-control-panel-mobile, db-control-panel-mobile > .db-control-panel-mobile";
-$navigation-item: "db-navigation-item > .db-navigation-item, > .db-navigation-item";
-$navigation-item-group: "db-navigation-item-group > .db-navigation-item-group, > .db-navigation-item-group";
-$shell-sub-navigation: "> db-shell-sub-navigation > .db-shell-sub-navigation, > .db-shell-sub-navigation";
+
+@function get-sub-component($selector) {
+	@return "> * > #{$selector} > .#{$selector}, > #{$selector} > .#{$selector}, > .#{$selector}";
+}
+
+$control-panel-desktop: get-sub-component(db-control-panel-desktop);
+$control-panel-mobile: get-sub-component(db-control-panel-mobile);
+$navigation: get-sub-component(db-navigation);
+$navigation-item: get-sub-component(db-navigation-item);
+$navigation-item-group: get-sub-component(db-navigation-item-group);
+$shell-sub-navigation: get-sub-component(db-shell-sub-navigation);
 $overflow-scroll-right-button: "> .overflow-scroll-right-button, > db-button > .overflow-scroll-right-button";
 $overflow-scroll-left-button: "> .overflow-scroll-left-button, > db-button > .overflow-scroll-left-button";
