--- a/showcases/angular-showcase/src/app/components/control-panel-desktop/control-panel-desktop.component.html
+++ b/showcases/angular-showcase/src/app/components/control-panel-desktop/control-panel-desktop.component.html
@@ -10,13 +10,16 @@
 		let-exampleIndex="exampleIndex"
 		let-variantIndex="variantIndex"
 	>
-		<db-control-panel-desktop [width]="exampleProps?.width">
-			<db-control-panel-brand brand>
-				@if (!exampleProps?.example || exampleProps?.withName) {
+		<db-control-panel-desktop
+			[width]="exampleProps?.width"
+			[orientation]="exampleProps?.orientation ?? 'horizontal'"
+		>
+			<db-control-panel-brand brand slot="brand">
+				@if (exampleProps?.withName ?? true) {
 					DBHeader
 				}
 			</db-control-panel-brand>
-			@if (!exampleProps?.example || exampleProps?.withNavigation) {
+			@if (exampleProps?.withNavigation ?? true) {
 				<db-navigation [attr.aria-label]="exampleName">
 					<db-navigation-item icon="x_placeholder">
 						<a href="#">{{ exampleName }} </a>
@@ -27,21 +30,51 @@
 				</db-navigation>
 			}
 			<ng-container meta-navigation>
-				@if (!exampleProps?.example) {
-					<db-control-panel-meta-navigation>
+				@if (exampleProps?.withMeta ?? true) {
+					<db-control-panel-meta-navigation slot="metaNavigation">
 						<db-link href="#">Imprint</db-link>
 						<db-link href="#">Help</db-link>
 					</db-control-panel-meta-navigation>
 				}
 			</ng-container>
 			<ng-container primary-actions>
-				@if (!exampleProps?.example) {
-					<app-primary-actions></app-primary-actions>
+				@if (exampleProps?.withPrimary ?? true) {
+					<db-control-panel-primary-actions slot="primaryActions">
+						<db-button
+							icon="magnifying_glass"
+							variant="ghost"
+							[noText]="true"
+						>
+							Search
+						</db-button>
+					</db-control-panel-primary-actions>
 				}
 			</ng-container>
 			<ng-container secondary-actions>
-				@if (!exampleProps?.example) {
-					<app-secondary-actions></app-secondary-actions>
+				@if (exampleProps?.withSecondary ?? true) {
+					<db-control-panel-secondary-actions slot="secondaryActions">
+						<db-button
+							icon="x_placeholder"
+							variant="ghost"
+							[noText]="true"
+						>
+							Profile
+						</db-button>
+						<db-button
+							icon="x_placeholder"
+							variant="ghost"
+							[noText]="true"
+						>
+							Notification
+						</db-button>
+						<db-button
+							icon="x_placeholder"
+							variant="ghost"
+							[noText]="true"
+						>
+							Help
+						</db-button>
+					</db-control-panel-secondary-actions>
 				}
 			</ng-container>
 		</db-control-panel-desktop>
