--- a/packages/components/src/styles/internal/_control-panel-desktop.scss
+++ b/packages/components/src/styles/internal/_control-panel-desktop.scss
@@ -364,7 +364,7 @@
 		grid-area: button;
 		padding-block: variables.$db-spacing-fixed-xs;
 		display: flex;
-		justify-content: end;
+		justify-content: flex-end;
 
 		@include helpers.divider("top");
 	}
