--- a/packages/components/src/styles/internal/_form-components.scss
+++ b/packages/components/src/styles/internal/_form-components.scss
@@ -372,7 +372,7 @@ $input-valid-types:
 			background-color: colors.$db-adaptive-bg-basic-transparent-semi-hovered;
 		}
 
-		@if ($selector == input or $selector == textarea) {
+		&:is(input, textarea) {
 			/* see https://developer.mozilla.org/en-US/docs/Web/CSS/field-sizing */
 			&[data-field-sizing="content"] {
 				field-sizing: content;
@@ -381,13 +381,13 @@ $input-valid-types:
 			&[data-field-sizing="fixed"] {
 				field-sizing: fixed;
 			}
+		}
 
-			&:not(:disabled):read-only {
-				background-color: var(
-					--db-textarea-read-only,
-					#{colors.$db-adaptive-bg-basic-transparent-full-default}
-				) !important;
-			}
+		&:is(input, textarea):not(:disabled):read-only {
+			background-color: var(
+				--db-textarea-read-only,
+				#{colors.$db-adaptive-bg-basic-transparent-full-default}
+			) !important;
 		}
 	}
 
