refactor: replaced leftovers of release 2.x

--- a/showcases/patternhub/styles/decision-tree.scss
+++ b/showcases/patternhub/styles/decision-tree.scss
@@ -7,8 +7,7 @@
 	text-align: center;
 
 	h2 {
-		font-size: var(--db-type-headline-font-size-3xs);
-		line-height: var(--db-type-headline-line-height-3xs);
+		font: var(--db-type-headline-3xs);
 		margin-block: var(--db-spacing-fixed-3xs);
 	}
 
