style(badge): added a min-inline-size
especially for single character contents

--- a/packages/components/src/components/badge/badge.scss
+++ b/packages/components/src/components/badge/badge.scss
@@ -54,6 +54,8 @@
 	block-size: fit-content;
 	inline-size: fit-content;
 	font-weight: 700;
+	min-inline-size: calc(1.4em - 2 * #{variables.$db-spacing-fixed-2xs});
+	box-sizing: content-box;
 
 	&:has(.db-icon) {
 		padding: variables.$db-spacing-fixed-3xs;
