Revert "refactor: causing screen- and snapshot regeneration"
This reverts commit 3db71f88e0632dafd2c6ad256425c1582ab8a5f6.

--- a/showcases/angular-showcase/src/app/components/popover/popover.component.html
+++ b/showcases/angular-showcase/src/app/components/popover/popover.component.html
@@ -26,7 +26,7 @@
 				{{ exampleProps?.content }}
 			} @else {
 				<ul class="popover-list">
-					<li>Popover Custom Item 1b</li>
+					<li>Popover Custom Item 1</li>
 					<li>Popover Custom Item 2</li>
 				</ul>
 				<db-button>Popover Custom Item 3</db-button>
