--- a/packages/components/src/components/badge/badge.scss
+++ b/packages/components/src/components/badge/badge.scss
@@ -55,10 +55,10 @@
 	inline-size: fit-content;
 	font-weight: 700;
 
-	// I added a minimum inline size, especially for single-character content, to ensure that it won't be any narrower than a circle.
+	// Added a minimum inline size, especially for single-character content, to ensure that it won't be any narrower than a circle.
+	box-sizing: content-box;
 	&:not(:empty) {
 		min-inline-size: calc(1.4em - 2 * #{variables.$db-spacing-fixed-2xs});
-		box-sizing: content-box;
 	}
 
 	&:has(.db-icon) {
