--- a/showcases/angular-showcase/src/app/components/form/inputs/inputs.component.html
+++ b/showcases/angular-showcase/src/app/components/form/inputs/inputs.component.html
@@ -7,7 +7,7 @@
 		<legend>Different form approaches</legend>
 		<db-input
 			label="Plain"
-			placeholder="Placeholder"
+			placeholder="Placeholder1"
 			message="Description"
 			icon="x_placeholder"
 			name="input-name"
@@ -16,7 +16,7 @@
 		/>
 		<db-input
 			label="ngModel"
-			placeholder="Placeholder"
+			placeholder="Placeholder1"
 			message="Description"
 			icon="x_placeholder"
 			name="input-name"
@@ -24,7 +24,7 @@
 		/>
 		<db-input
 			label="formControl"
-			placeholder="Placeholder"
+			placeholder="Placeholder1"
 			message="Description"
 			icon="x_placeholder"
 			name="input-name"
