Revert "refactor: regenerated screen- and snapshots"
This reverts commit c89688116a6b28ce919a9b7d5ff4264acc872425.

--- a/showcases/angular-showcase/src/app/components/form/form.component.html
+++ b/showcases/angular-showcase/src/app/components/form/form.component.html
@@ -5,7 +5,7 @@
 			name="ngModelInput"
 			[(ngModel)]="model.input"
 			label="Input with ngModel"
-			placeholder="Placeholder1"
+			placeholder="Placeholder"
 			message="Description"
 			icon="x_placeholder"
 		>
@@ -14,7 +14,7 @@
 		<db-textarea
 			name="textarea"
 			label="Textarea Controlled"
-			placeholder="Placeholder1"
+			placeholder="Placeholder"
 			message="Description"
 			icon="x_placeholder"
 			[value]="textarea"
@@ -24,7 +24,7 @@
 		<db-textarea
 			name="textarea"
 			label="Textarea with defaultValue"
-			placeholder="Placeholder1"
+			placeholder="Placeholder"
 			message="Description"
 			icon="x_placeholder"
 			defaultValue="default value"
@@ -35,7 +35,7 @@
 			name="ngModelTextarea"
 			[(ngModel)]="model.textarea"
 			label="Textarea with ngModel"
-			placeholder="Placeholder1"
+			placeholder="Placeholder"
 			message="Description"
 			icon="x_placeholder"
 			value="Textarea"
@@ -67,7 +67,7 @@
 					name="form"
 					id="form"
 					label="Textinput"
-					placeholder="Placeholder1"
+					placeholder="Placeholder"
 					message="Description"
 					icon="x_placeholder"
 					formControlName="input"
@@ -78,7 +78,7 @@
 					name="form"
 					id="datalist"
 					label="Textinput with Datalist"
-					placeholder="Placeholder1"
+					placeholder="Placeholder"
 					message="Description"
 					[dataList]="dataList"
 					icon="x_placeholder"
@@ -115,7 +115,7 @@
 					name="textarea"
 					id="textarea"
 					label="Textarea"
-					placeholder="Placeholder1"
+					placeholder="Placeholder"
 					message="Description"
 					icon="x_placeholder"
 					formControlName="textarea"
@@ -174,7 +174,7 @@
 				<db-select
 					name="select"
 					label="Select"
-					placeholder="Placeholder1"
+					placeholder="Placeholder"
 					message="Description"
 					icon="x_placeholder"
 					formControlName="select"
