--- a/showcases/angular-showcase/src/app/components/form/textareas/textareas.component.html
+++ b/showcases/angular-showcase/src/app/components/form/textareas/textareas.component.html
@@ -7,7 +7,7 @@
 		<legend>Different form approaches</legend>
 		<db-textarea
 			label="Plain"
-			placeholder="Placeholder1"
+			placeholder="Placeholder"
 			message="Description"
 			name="textarea-name"
 			[value]="plain"
@@ -15,14 +15,14 @@
 		/>
 		<db-textarea
 			label="ngModel"
-			placeholder="Placeholder1"
+			placeholder="Placeholder"
 			message="Description"
 			name="textarea-name"
 			[(ngModel)]="ngModel"
 		/>
 		<db-textarea
 			label="formControl"
-			placeholder="Placeholder1"
+			placeholder="Placeholder"
 			message="Description"
 			name="textarea-name"
 			[formControl]="formControl"
