--- a/packages/components/src/components/drawer/drawer.scss
+++ b/packages/components/src/components/drawer/drawer.scss
@@ -102,6 +102,7 @@ $spacings: (
 			--db-drawer-content-padding-inline,
 			#{map.get($spacing, "inline")}
 		);
+
 		// TODO: Evaluate whether we need overflow: hidden and that for only specifically set y here.
 		overflow-y: auto;
 		overflow-block: auto;
@@ -110,7 +111,7 @@ $spacings: (
 
 %spacing-drawer {
 	@each $name, $spacing in $spacings {
-		@if ($name == "medium") {
+		@if $name == "medium" {
 			@include get-spacing($spacing);
 		}
 
