--- a/packages/components/src/components/notification/notification.scss
+++ b/packages/components/src/components/notification/notification.scss
@@ -123,7 +123,7 @@
 	img {
 		--db-icon-margin-end: 0;
 
-		@include icons.to-filled-icon();
+		@include icons.to-filled-icon;
 
 		grid-area: icon;
 	}
@@ -203,7 +203,6 @@
 	@each $name in colors.$variant-colors {
 		&[data-semantic="#{$name}"] {
 			@extend %db-#{$name}-variables;
-
 			@include icons.variant-icons($name);
 
 			&::before {
