--- a/packages/components/src/components/tab-item/tab-item.scss
+++ b/packages/components/src/components/tab-item/tab-item.scss
@@ -81,7 +81,7 @@ $with-icon-padding-calc: calc(
 		}
 
 		&:is([data-no-text], [data-no-text="true"]) {
-			@include icons.is-icon-text-replace();
+			@include icons.is-icon-text-replace;
 
 			padding: 0;
 			inline-size: calc(
