--- a/packages/components/src/styles/internal/_stack-components.scss
+++ b/packages/components/src/styles/internal/_stack-components.scss
@@ -92,8 +92,8 @@ $stack-gaps: (
 		flex-wrap: wrap;
 	}
 
-	@include get-stack-alignments();
-	@include get-stack-justify-contents();
+	@include get-stack-alignments;
+	@include get-stack-justify-contents;
 
 	@each $name, $gap in $stack-gaps {
 		&[data-gap="#{$name}"] {
