--- a/packages/foundations/scss/defaults/default-required.scss
+++ b/packages/foundations/scss/defaults/default-required.scss
@@ -6,11 +6,9 @@
 @use "../fonts";
 @use "../screen-sizes";
 @use "../colors/default-color-icons";
-
 @forward "../colors/default-color-mappings";
 @forward "../normalize";
-
-@include screen-sizes.get-breakpoint-properties();
+@include screen-sizes.get-breakpoint-properties;
 
 /* stylelint-disable-next-line at-rule-prelude-no-invalid,layer-name-pattern */
 @layer #{helpers.$layer-variables} {
