--- a/packages/foundations/tailwind/theme/_variables.scss
+++ b/packages/foundations/tailwind/theme/_variables.scss
@@ -1,4 +1,4 @@
-@mixin get_variables() {
+@mixin get-variables() {
 	--spacing-fix-3xs: var(--db-spacing-fixed-3xs);
 	--spacing-fix-2xs: var(--db-spacing-fixed-2xs);
 	--spacing-fix-xs: var(--db-spacing-fixed-xs);
