--- a/packages/components/test/import-styles/simple-button/test.css
+++ b/packages/components/test/import-styles/simple-button/test.css
@@ -1,21 +1,21 @@
 /* The theme contains all prop required for components like spacings, colors, ... */
-@import url("@db-ux/core-foundations/build/styles/defaults/default-theme.css");
+@import "@db-ux/core-foundations/build/styles/defaults/default-theme.css";
 
 /* The font include uses default font families based on your bundling paths (relative, absolute, webpack, rollup) */
-@import url("@db-ux/core-foundations/build/styles/fonts/rollup.css");
+@import "@db-ux/core-foundations/build/styles/fonts/rollup.css";
 
 /* The required styles will normalize css and add focus and default font to body */
-@import url("@db-ux/core-foundations/build/styles/defaults/default-required.css");
+@import "@db-ux/core-foundations/build/styles/defaults/default-required.css";
 
 /* The default setting for :root, adds a color space (neutral-bg-basic-level-1) and a density (regular). */
-@import url("@db-ux/core-foundations/build/styles/defaults/default-root.css");
+@import "@db-ux/core-foundations/build/styles/defaults/default-root.css";
 
 /* Optional: Add animations / transitions for components */
-@import url("@db-ux/core-components/build/styles/component-animations.css");
+@import "@db-ux/core-components/build/styles/component-animations.css";
 
 /* Optional: Add data-icon/data-icon-trailing to global attributes to enable icons for components */
-@import url("@db-ux/core-foundations/build/styles/icons/rollup.css");
+@import "@db-ux/core-foundations/build/styles/icons/rollup.css";
 
 /* Optional: Add components */
-@import url("@db-ux/core-components/build/components/button/button.css");
-@import url("@db-ux/core-components/build/components/input/input.css");
+@import "@db-ux/core-components/build/components/button/button.css";
+@import "@db-ux/core-components/build/components/input/input.css";
