Revert "fix(select): Angular tests (#4903)"
This reverts commit 683861fbf91380b33281847da3d3f87c06290a58.

--- a/showcases/angular-showcase/src/app/components/select/select.component.html
+++ b/showcases/angular-showcase/src/app/components/select/select.component.html
@@ -20,7 +20,7 @@
 			[disabled]="exampleProps?.disabled"
 			[icon]="exampleProps?.icon"
 			[required]="exampleProps?.required"
-			[value]="exampleProps?.value || ''"
+			[value]="exampleProps?.value"
 			[message]="exampleProps?.message"
 			[showMessage]="exampleProps?.showMessage"
 			[invalidMessage]="exampleProps?.invalidMessage"
